<resources>
    <string name="app_name">CloudMusic</string>
    <string name="loginByMobil">手机号登录</string>
    <string name="register">注册</string>
    <string name="visitor"><u>游客试用</u></string>
    <string name="login">登录</string>
    <string name="register_button">下一步</string>
    <string name="resetPass"><u>重设密码</u></string>
    <string name="inputHint_phone">&#160;输入手机号</string>
    <string name="inputHint_pass">&#160;设置登录密码，不少于6位</string>

    <string name="main_one">发现</string>
    <string name="main_two">视频</string>
    <string name="main_three">我的</string>
    <string name="main_four">朋友</string>
    <string name="main_five">账号</string>
    <string name="txtDemo">你的手机号：+86 18888888888</string>
    <string name="textTitle">会收到一条带有验证码的短信，请输入验证码</string>
    <string name="weChat">微信</string>
    <string name="weiBo">微博</string>
    <string name="QQ">QQ</string>
    <string name="E_MAIL">网易邮箱</string>
    <string name="otherLogin">其他登录方式</string>
</resources>
